# lattice-lwe-zkp-protocol

./: CMakeLists.txt  README.md
examples/: main.cpp
include/: lwe_params.hpp  lwe_proof.hpp  lwe_utils.hpp  prover.hpp  verifier.hpp
src/: lwe_utils.cpp  prover.cpp  verifier.cpp
test/: benchmark_zkp.cpp  test_cases.cpp  test_zkp.cpp
